# service_stat

./: Cargo.toml  Dockerfile  README.md  makefile
.github/: dependabot.yml
src/: main.rs
static/js/: index.js
