[package]
name = "service_stat"
version = "0.1.0"
authors = ["aedius"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
event_auth = { git = "https://github.com/horfimbor/event_auth" }
mod_event = { git = "https://github.com/horfimbor/mod_event" }

futures = "0.1"
eventstore = "0.5.1"
serde = "1.0.104"
serde_json = "1.0.46"
serde_derive = "1.0"
tiny_http="0.6.2"